--- a/OPEN.html
+++ b/OPEN.html
@@ -160,7 +160,7 @@ nav.VIDEOS .VIDEOS,
   
   
       <div class="w3-row w3-padding-64" id="id3">
-	  <h2><br><br><br><br>VIDEOS</h2>
+	  <h2><br><br><br>VIDEOS</h2>
               
             <div id = "leftbox">
                 <h4>BREAK-DANCING</h4>
