--- a/OPEN.html
+++ b/OPEN.html
@@ -94,7 +94,7 @@ nav.VIDEOS .VIDEOS,
     </div>
 
     <div class="w3-col m6 w3-padding-large">
-      <h1 class="w3-center">WHAT IS HIP-HOP?</h1><br>
+      <h1 class="w3-center">WHAT IS HIP-HOP?!!!</h1><br>
 	  <p>Hip hop or hip-hop is a culture and art movement 
 	  that was created by African Americans, Latino Americans and Caribbean 
 	  Americans in the Bronx, New York City.The origin of the name is often disputed. It is also argued as to 
